--- a/packages/frontend/src/index.scss
+++ b/packages/frontend/src/index.scss
@@ -1,8 +1,9 @@
 .site-layout {
   height: 100vh;
 
-  .site-layout-background {
+  .site-layout-content {
     background: #fff;
+    padding: 24px 50px;
   }
 
   header {
@@ -14,10 +15,6 @@
       color: white !important;
       margin-bottom: 0 !important;
     }
-  }
-
-  main {
-    padding: 24px 50px;
   }
 }
 
