--- a/packages/frontend/src/index.scss
+++ b/packages/frontend/src/index.scss
@@ -20,6 +20,27 @@
 
 .flex {
   display: flex;
+
+  &.center {
+    align-items: center;
+    justify-content: center;
+  }
+
+  &.column {
+    flex-direction: column;
+  }
+
+  &.align-center {
+    align-items: center;
+  }
+
+  &.justify-center {
+    justify-content: center;
+  }
+}
+
+.h-100 {
+  height: 100%;
 }
 
 .text-white {
@@ -28,4 +49,23 @@
 
 .mb-0 {
   margin-bottom: 0;
+}
+
+.mb-1 {
+  margin-bottom: 4px;
+}
+
+.mt-0 {
+  margin-top: 0;
+}
+
+.mt-1 {
+  margin-top: 4px;
+}
+
+.fight-container {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  flex-wrap: wrap;
 }
